--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Portefolio d'Audrey Svart!</h1>
-    <p>I'm hosted with GitHub Pages</p>
+    <p>Coucou</p>
     
 </body>
 </html>
