--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
 
             <ul class="nav-list">
               <li class="nav-item">
-                <a href="#home" class="nav-link scroll-link">Home</a>
+                <a href="#home" class="nav-link scroll-link">Accueil</a>
               </li>
               <li class="nav-item">
-                <a href="#about" class="nav-link scroll-link">About</a>
+                <a href="#about" class="nav-link scroll-link">A Propos</a>
               </li>
               <li class="nav-item">
                 <a href="#services" class="nav-link scroll-link">Services</a>
               </li>
               <li class="nav-item">
-                <a href="#skills" class="nav-link scroll-link">Skills</a>
+                <a href="#skills" class="nav-link scroll-link">Compétences</a>
               </li>
               <li class="nav-item">
-                <a href="#teams" class="nav-link scroll-link">Teams</a>
+                <a href="#teams" class="nav-link scroll-link">iels m'ont fait confiance</a>
               </li>
               <li class="nav-item">
                 <a href="#contact" class="nav-link scroll-link">Contact</a>
@@ -73,10 +73,10 @@
       </nav>
       <!-- Hero -->
       <div class="hero">
-        <h3>Hello, my name is</h3>
+        <h3>Bonjour, je m'appelle </h3>
         <h1>Audrey Svart Reichdiener</h1>
-        <h4>And I'm a <span id="type1"></span></h4>
-        <a href="#">Hire me</a>
+        <h4>Et je suis <span id="type1"></span></h4>
+        <a href="#">Embauchez-moi ! </a>
       </div>
 
       <img class="banner" src="./images/bg.png" alt="" />
@@ -91,7 +91,7 @@
     <!-- Main -->
     <section class="section about" id="about">
       <div class="title">
-        <h1>About me</h1>
+        <h1>A Propos de moi</h1>
       </div>
 
       <div class="about-center container">
@@ -99,7 +99,7 @@
           <img src="./images/profile1.jpg" alt="" />
         </div>
         <div class="right" data-aos="fade-left" data-aos-duration="2000">
-          <h1>I'm Audrey a <span id="type2"></span></h1>
+          <h1>Audrey, une <span id="type2"></span></h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
             placeat inventore rerum tempore cupiditate, amet adipisci aut eius
@@ -108,7 +108,7 @@
             voluptate similique sunt exercitationem voluptatibus, illo et fugit
             eveniet provident quo atque, nesciunt explicabo tenetur!
           </p>
-          <a href="#" class="btn">Download CV</a>
+          <a href="#" class="btn">Téléchargez mon CV</a>
         </div>
       </div>
     </section>
@@ -116,7 +116,7 @@
     <!-- Services -->
     <section class="section theme" id="services">
       <div class="title">
-        <h1>My Services</h1>
+        <h1>Services</h1>
       </div>
 
       <div class="services-center container">
@@ -152,7 +152,7 @@
     <!-- Skills -->
     <section class="section skills" id="skills">
       <div class="title">
-        <h1>My Skills</h1>
+        <h1>Mes compétences</h1>
       </div>
 
       <div class="skills-center container">
