changements html et css
changement couleur dans css (jaune à vert) et personnalisation de mes ID et des descriptifs dans le html. Trad d'anglais à français

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
       <nav class="nav">
         <div class="navigation container">
           <div class="logo">
-            <h1>YouTuber<span>.</span></h1>
+            <h1>Portfolio<span>.</span></h1>
           </div>
 
           <div class="menu">
             <div class="top-nav">
               <div class="logo">
-                <h1>YouTuber<span>.</span></h1>
+                <h1>Portfolio<span>.</span></h1>
               </div>
               <div class="close">
                 <i class="fas fa-times"></i>
@@ -58,7 +58,9 @@
                 <a href="#skills" class="nav-link scroll-link">Compétences</a>
               </li>
               <li class="nav-item">
-                <a href="#teams" class="nav-link scroll-link">iels m'ont fait confiance</a>
+                <a href="#teams" class="nav-link scroll-link"
+                  >iels m'ont fait confiance</a
+                >
               </li>
               <li class="nav-item">
                 <a href="#contact" class="nav-link scroll-link">Contact</a>
@@ -73,7 +75,7 @@
       </nav>
       <!-- Hero -->
       <div class="hero">
-        <h3>Bonjour, je m'appelle </h3>
+        <h3>Bonjour, je m'appelle</h3>
         <h1>Audrey Svart Reichdiener</h1>
         <h4>Et je suis <span id="type1"></span></h4>
         <a href="#">Embauchez-moi ! </a>
@@ -84,7 +86,6 @@
       <div class="icons">
         <span><i class="fab fa-facebook-f"></i></span>
         <span><i class="fab fa-instagram"></i></span>
-        <span><i class="fab fa-twitter"></i></span>
       </div>
     </header>
 
@@ -131,7 +132,7 @@
 
         <div class="service" data-aos="fade-up" data-aos-duration="2000">
           <span><i class="fas fa-chart-line"></i></span>
-          <h2>Advertising</h2>
+          <h2>Web Développeuse</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
             exercitationem numquam porro asperiores neque architecto.
@@ -140,7 +141,7 @@
 
         <div class="service" data-aos="fade-down" data-aos-duration="2000">
           <span><i class="fas fa-blender-phone"></i></span>
-          <h2>Apps Design</h2>
+          <h2>Community Manager</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
             exercitationem numquam porro asperiores neque architecto.
@@ -187,7 +188,7 @@
           </div>
 
           <div class="skills-box">
-            <h4>Mongodb</h4>
+            <h4>React</h4>
             <div class="skills-ilt">
               <div class="skills-bar mongodb"></div>
               <span>95%</span>
@@ -196,7 +197,7 @@
         </div>
 
         <div class="right" data-aos="fade-left" data-aos-duration="2000">
-          <h3>My creative skills and experience</h3>
+          <h3>Ma créativité et mes expériences</h3>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam
             tempora distinctio sed. Animi, doloribus est. Suscipit praesentium
@@ -205,7 +206,7 @@
             soluta nostrum deserunt consequuntur, ut quis eligendi? Quidem et
             doloremque cupiditate veniam optio corporis voluptatum, animi nemo!
           </p>
-          <a href="#" class="btn">Read more</a>
+          <a href="#" class="btn">Lire plus</a>
         </div>
       </div>
     </section>
@@ -213,7 +214,7 @@
     <!-- Teams -->
     <section class="section theme" id="teams">
       <div class="title">
-        <h1>My teams</h1>
+        <h1>Iels m'ont fait confiance</h1>
       </div>
 
       <div class="teams-center container">
@@ -225,7 +226,7 @@
                   <div class="img-cover">
                     <img src="./images/profile1.jpg" alt="" />
                   </div>
-                  <h3>Someone name</h3>
+                  <h3>Joachim</h3>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Libero, quo?
@@ -237,7 +238,7 @@
                   <div class="img-cover">
                     <img src="./images/profile2.jpg" alt="" />
                   </div>
-                  <h3>Someone name</h3>
+                  <h3>Auriella</h3>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Libero, quo?
@@ -249,7 +250,7 @@
                   <div class="img-cover">
                     <img src="./images/profile3.jpg" alt="" />
                   </div>
-                  <h3>Someone name</h3>
+                  <h3>Sophie</h3>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Libero, quo?
@@ -261,7 +262,7 @@
                   <div class="img-cover">
                     <img src="./images/profile4.jpg" alt="" />
                   </div>
-                  <h3>Someone name</h3>
+                  <h3>Clément</h3>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Libero, quo?
@@ -273,7 +274,7 @@
                   <div class="img-cover">
                     <img src="./images/profile3.jpg" alt="" />
                   </div>
-                  <h3>Someone name</h3>
+                  <h3>Michelle</h3>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Libero, quo?
@@ -285,7 +286,7 @@
                   <div class="img-cover">
                     <img src="./images/profile5.jpg" alt="" />
                   </div>
-                  <h3>Someone name</h3>
+                  <h3>Alexiel</h3>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Libero, quo?
@@ -301,12 +302,12 @@
     <!-- Contact -->
     <section class="section contact" id="contact">
       <div class="title">
-        <h1>Contact me</h1>
+        <h1>Contactez-moi me</h1>
       </div>
 
       <div class="contact-center container">
         <div class="left" data-aos="fade-down-right" data-aos-duration="2000">
-          <h2>Get in Touch</h2>
+          <h2>Restons en contact !</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
             praesentium quibusdam ratione, cum ducimus minus iure saepe ipsum
@@ -316,16 +317,16 @@
           <div>
             <span class="icon"><i class="fas fa-user"></i></span>
             <span class="content">
-              <h3>Name</h3>
-              <span>Alexandar Smith</span>
+              <h3>Nom</h3>
+              <span>Audrey Svart Reichdiener</span>
             </span>
           </div>
 
           <div>
             <span class="icon"><i class="fas fa-map-marker-alt"></i></span>
             <span class="content">
-              <h3>Address</h3>
-              <span>United States</span>
+              <h3>Addresse</h3>
+              <span>Quartier Rangueil, Toulouse</span>
             </span>
           </div>
 
@@ -333,13 +334,13 @@
             <span class="icon"><i class="fas fa-envelope"></i></span>
             <span class="content">
               <h3>Email</h3>
-              <span>youtube@gmail.com</span>
+              <span>audrey.svart@gmail.com</span>
             </span>
           </div>
         </div>
         <div class="right" data-aos="fade-up-left" data-aos-duration="2000">
           <form class="form">
-            <h2>Message me</h2>
+            <h2>écrivez-moi</h2>
             <div>
               <input type="text" placeholder="Name" />
               <input type="email" placeholder="Email" />
@@ -348,17 +349,17 @@
             <textarea
               cols="10"
               rows="10"
-              placeholder="Describe Project"
+              placeholder="Décrivez votre projet"
             ></textarea>
 
-            <a href="#" class="btn">Send message</a>
+            <a href="#" class="btn">envoyer le message</a>
           </form>
         </div>
       </div>
     </section>
 
     <footer>
-      <p>Created By <span>Codevo</span> | &copy; 2020 All rights reserved.</p>
+      <p>2021 Tous droits réservés</p>
     </footer>
 
     <!-- AOS -->
