--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     <!-- Contact -->
     <section class="section contact" id="contact">
       <div class="title">
-        <h1>Contactez-moi me</h1>
+        <h1>Contactez-moi</h1>
       </div>
 
       <div class="contact-center container">
